--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "next": "12.0.10",
+    "p5": "^1.4.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-p5": "^1.3.27"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
