--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "base256-encoding": "^1.1.1",
     "next": "12.0.10",
     "p5": "^1.4.1",
     "react": "17.0.2",
