--- a/client/package.json
+++ b/client/package.json
@@ -8,18 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "base256-encoding": "^1.1.1",
     "next": "12.0.10",
-    "p5": "^1.4.1",
+    "tailwindcss": "^3.0.23",
+    "autoprefixer": "^10.4.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-p5": "^1.3.27"
+    "postcss": "^8.4.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.23"
+    "eslint-config-next": "12.0.10"
   }
 }
