--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node script.js"
+    "build": "node script.js"
   },
   "keywords": [],
   "author": "",
