--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
 
-            "src" : "./script.js",
+            "src" : "./index.js",
             "use": "@vercel/node"
 
         }
